syntax = "proto3";

package cart;

option php_namespace = "GRPC\\cart";
option php_metadata_namespace = "GRPC\\cart\\GPBMetadata";


service CartGrpc {
    rpc CartCreate (cartCreateRequest) returns (cartCreateResponse);
    rpc CartList (cartListRequest) returns (cartListResponse);
    rpc CartDelete (cartDeleteRequest) returns (cartDeleteResponse);
}

message cartCreateRequest {
    int32 ProductPriceId = 1;
    int32 number = 2;
}

message cartCreateResponse {
    int32 id = 1;
    int32 userId = 2;
    string uuid = 3;
    string totalPrice = 4;
}

message cartListRequest {

}

message cartListResponse {
    int32 cartId = 1;
    int32 ProductPriceId = 2;
    int32 number = 3;
    int64 allTotalPrice = 4;
    int32 userId = 5;
    string uuid = 6;
}

message cartDeleteRequest {
    int32 cartId = 1;
}

message cartDeleteResponse {
    string message = 1;
}
